# XEngineer-ai-pr-review-tui

./: .env.example  .gitignore  README.md  README.zh-CN.md  action.yml  package.json  pyproject.toml
.github/workflows/: xengineer-pr-review.yml
examples/: demo-pr.md  review-report-demo.md
scripts/: release_check.py  run-python.js
src/xengineer_pr_review/: __main__.py  action_workflow.py  context.py  credentials.py  diff_parser.py  env.py  export.py  github.py  judge_demo.py  langgraph_agent.py  llm.py  locale.py  models.py  pipeline.py  pr_url.py  review_tools.py  rules.py  tui.py
tests/: npm-wrapper.test.js  test_action_metadata.py  test_action_workflow.py  test_context.py  test_credentials.py  test_diff_parser.py  test_env.py  test_export.py  test_github.py  test_langgraph_agent.py  test_live_ai_review.py  test_llm.py  test_locale.py  test_main.py  test_npm_package.py  test_pipeline.py  test_pr_url.py  test_release_check.py  test_review_tools.py  test_rules.py  test_smoke.py  test_tui.py
tests/fixtures/: sample.diff
