[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xengineer-pr-review"
version = "0.1.0"
description = "AI-assisted TUI for reviewing public GitHub pull requests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx[socks]>=0.27",
  "openai>=1.0",
  "pydantic>=2.7",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
xpr-review = "xengineer_pr_review.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
